--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -1,4 +1,4 @@
-.category-container {
+.directory-item-container {
   min-width: 30%;
   height: 240px;
   flex: 1 1 auto;
@@ -8,7 +8,6 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
-  border-radius: 5px;
 
   &:hover {
     cursor: pointer;
@@ -18,10 +17,8 @@
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
 
-    & .category-body-container {
+    & .body {
       opacity: 0.9;
-      background-color: rgb(234, 234, 255);
-      border-radius: 10px;
     }
   }
 
@@ -44,7 +41,7 @@
     background-position: center;
   }
 
-  .category-body-container {
+  .body {
     height: 90px;
     padding: 0 25px;
     display: flex;
@@ -55,7 +52,6 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
-    border-radius: 5px;
 
     h2 {
       font-weight: bold;
